--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "emailjs": "~0.3.6",
     "express": "~3.5.1",
     "helmet": "~0.2.0",
-    "html5": "^1.0.5",
+    "html5": "~1.0.5",
     "jade": "~1.3.0",
     "moment": "^2.8.3",
     "mongoose": "~3.8.1",
