--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "helmet": "~0.2.0",
     "html5": "~1.0.5",
     "jade": "~1.3.0",
-    "moment": "^2.8.3",
+    "moment": "~2.8.3",
     "mongoose": "~3.8.1",
     "passport": "~0.2.0",
     "passport-facebook": "~1.0.2",
@@ -23,7 +23,7 @@
     "passport-local": "~1.0.0",
     "passport-oauth": "~1.0.0",
     "passport-twitter": "~1.0.2",
-    "zombie": "^2.1.1"
+    "zombie": "~2.1.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
